fix direction alignment for RTL

--- a/frontend-angular/src/styles.scss
+++ b/frontend-angular/src/styles.scss
@@ -132,8 +132,15 @@ mat-dialog-actions {
   margin-left: 1.4rem !important;
 }
 
-
-.icon-rtl {
+[dir="rtl"] [mat-menu-item] mat-icon {
   margin-left: 0px !important;
   margin-right: 16px !important;
+}
+
+[dir="rtl"] .cdk-overlay-connected-position-bounding-box mat-option {
+  direction: rtl !important;
+}
+
+[dir="rtl"] .cdk-overlay-connected-position-bounding-box mat-datepicker-content {
+  direction: rtl !important;
 }
